unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/tspa__Visual_Remote_Assistant_Statistics__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant Statistics</label>
    <nameField>
        <displayFormat>STAT-{000}</displayFormat>
        <label>Visual Remote Assistant Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>