unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/fields/tspa__Current_Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>tspa__Current_Number_of_Sessions__c</fullName>
    <description>Current Annual Session number based on session average value for last 30 days</description>
    <label>Current Number of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>