unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/fields/tspa__Current_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Current_Value__c</fullName>
    <formula>tspa__Current_Number_of_Sessions__c *  tspa__Session_Average_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>