unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/fields/tspa__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>tspa__DeveloperName__c</fullName>
    <externalId>true</externalId>
    <label>DeveloperName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>