unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/fields/tspa__Potential_Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>tspa__Potential_Number_of_Sessions__c</fullName>
    <description>Potential Annual session number</description>
    <label>Potential Number of Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>