unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/fields/tspa__Session_Average_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Session_Average_Value__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Session Average Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>