unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/fields/tspa__Top_25_Users_Session_Average__c.field-meta.xml
<CustomField>
    <fullName>tspa__Top_25_Users_Session_Average__c</fullName>
    <label>Top 25% Users Session Average</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>