unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/validationRules/tspa__Value_Greater_Than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>tspa__Value_Greater_Than_1</fullName>
    <active>true</active>
    <errorConditionFormula>tspa__Session_Average_Value__c &lt; 1</errorConditionFormula>
    <errorDisplayField>tspa__Session_Average_Value__c</errorDisplayField>
    <errorMessage>The minimum value is 1.</errorMessage>
</ValidationRule>