unpackaged/main/default/objects/tspa__Visual_Remote_Assistant_Statistics__c/listViews/tspa__All.listView-meta.xml
<ListView>
    <fullName>tspa__All</fullName>
    <columns>NAME</columns>
    <columns>tspa__DeveloperName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>